force-app/main/default/objects/Task_spec__c/Task_spec__c.object-meta.xml
<CustomObject>
    <description>The specification or template for a single task - linked to a task spec group</description>
    <label>Task spec</label>
    <nameField>
        <displayFormat>TSpec-{000000}</displayFormat>
        <label>Task spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>