force-app/main/default/objects/Task_spec__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user to whom tasks based on this task spec should be assigned</description>
    <inlineHelpText>The user to whom tasks based on this task spec should be assigned</inlineHelpText>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task_specs</relationshipName>
    <type>Lookup</type>
</CustomField>