force-app/main/default/objects/Task_spec__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Populates the Comments field of tasks built from this task spec</description>
    <inlineHelpText>Populates the Comments field of tasks built from this task spec</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>