force-app/main/default/objects/Task_spec__c/fields/Days_after__c.field-meta.xml
<CustomField>
    <fullName>Days_after__c</fullName>
    <description>If Due date is blank, then calculate the task&apos;s due date from this field, by adding this number of days to the date on which the task is created.</description>
    <inlineHelpText>If Due date is blank, then calculate the task&apos;s due date from this field, by adding this number of days to the date on which the task is created.</inlineHelpText>
    <label>Days after</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>