force-app/main/default/objects/Task_spec__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <description>The due date of tasks created from this task spec</description>
    <inlineHelpText>The due date of tasks created from this task spec</inlineHelpText>
    <label>Due date</label>
    <type>Date</type>
</CustomField>