force-app/main/default/objects/Task_spec__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject of tasks created from this task spec</description>
    <inlineHelpText>The subject of tasks created from this task spec</inlineHelpText>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>