force-app/main/default/objects/Task_spec__c/fields/Task_spec_group__c.field-meta.xml
<CustomField>
    <fullName>Task_spec_group__c</fullName>
    <description>This parent task spec group of this task spec</description>
    <inlineHelpText>This parent task spec group of this task spec</inlineHelpText>
    <label>Task spec group</label>
    <referenceTo>Task_spec_group__c</referenceTo>
    <relationshipLabel>Task specs</relationshipLabel>
    <relationshipName>Task_specs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>