force-app/main/default/objects/Task_spec__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Populates the Type field of tasks built from this task spec</description>
    <inlineHelpText>Populates the Type field of tasks built from this task spec</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Report/interim</fullName>
            </value>
            <value>
                <fullName>Financial Report</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>