force-app/main/default/objects/Task_spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_spec_group__c</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Comments__c</columns>
    <columns>Due_date__c</columns>
    <columns>Days_after__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>